# trimesh2

./: CMakeLists.txt  conan.meta.json  conandata.yml
base/: KDtree.cc  TriMesh_bounding.cc  TriMesh_curvature.cc  TriMesh_io.cc  TriMesh_normals.cc  TriMesh_pointareas.cc  TriMesh_tstrips.cc  Vec3Utils.cc  filter.cc  quaternion.cpp  remove.cc
extend/: extendio.cpp  quaternion.cpp
include/trimesh2/: TriMesh.h  Vec3Utils.h  quaternion.h
libsrc/: TriMesh_curvature.cc  TriMesh_io.cc  TriMesh_normals.cc  TriMesh_pointareas.cc  Vec3Utils.cpp  filter.cc
trimesh2/: CMakeLists.txt
trimesh2/base/: TriMesh_connectivity.cc  TriMesh_grid.cc  TriMesh_io.cc  TriMesh_stats.cc  Vec3Utils.cc
trimesh2/extend/: extendio.cpp  vertextransform.cpp
trimesh2/include/trimesh2/: TriMesh.h  Vec.h  XForm.h
trimesh2/libsrc/: TriMesh_bounding.cc  TriMesh_connectivity.cc  TriMesh_curvature.cc  TriMesh_io.cc  TriMesh_normals.cc  TriMesh_pointareas.cc  Vec3Utils.cpp  reorder_verts.cc
