file(GLOB BASE_SRC ${CMAKE_CURRENT_SOURCE_DIR}/base/*.cc)
file(GLOB EXTEND_SRC ${CMAKE_CURRENT_SOURCE_DIR}/extend/*.cpp)

set(SRCS ${BASE_SRC} ${EXTEND_SRC})
set(INCS ${CMAKE_CURRENT_SOURCE_DIR}/include/)

__add_real_target(trimesh2 lib SOURCE ${SRCS} INC ${INCS})
set_property(TARGET trimesh2 PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${INCLUDE_DIR})

if(INSTALL_TRIMESH2)
	INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include/ FILES_MATCHING PATTERN "*.h")
endif()

set_property(TARGET trimesh2 PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR}/include/)
